; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_sclp.c___sclp_queue_read_req.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_sclp.c___sclp_queue_read_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@sclp_reading_state = common dso_local global i64 0, align 8
@sclp_reading_state_idle = common dso_local global i64 0, align 8
@sclp_reading_state_reading = common dso_local global i64 0, align 8
@sclp_read_req = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@sclp_req_queue = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @__sclp_queue_read_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__sclp_queue_read_req() #0 {
  %1 = load i64, i64* @sclp_reading_state, align 8
  %2 = load i64, i64* @sclp_reading_state_idle, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i64, i64* @sclp_reading_state_reading, align 8
  store i64 %5, i64* @sclp_reading_state, align 8
  %6 = call i32 (...) @__sclp_make_read_req()
  %7 = call i32 @list_add(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sclp_read_req, i32 0, i32 0), i32* @sclp_req_queue)
  br label %8

8:                                                ; preds = %4, %0
  ret void
}

declare dso_local i32 @__sclp_make_read_req(...) #1

declare dso_local i32 @list_add(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
